[package]
name = "dicom-json"
version = "1.0.0"
edition = "2024"
authors = ["Fayaz <fayazexo@example.com>"]
description = "Convert DICOM medical files to JSON format"
repository = "https://github.com/fayazexo/dicom-json"
license = "MIT OR Apache-2.0"
keywords = ["dicom", "medical", "json", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "dicom-json"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
dicom = { version = "0.6", default-features = false, features = ["inventory-registry"] }
dicom-object = { version = "0.6", default-features = false }
dicom-core = "0.6"
dicom-dictionary-std = "0.6"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.5"
zip = "0.6"
rayon = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
indicatif = "0.17"

